istio/authorization-policy-deny.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: cncf-demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cncf-demo
  action: DENY
  rules:
    - to:
        - operation:
            methods: ["GET"]
